# generate-ci

./: Cargo.toml  README.md
.github/workflows/: ci-generate.yml  deploy.yml  generate-ci.yml
.reuse/: dep5
ci-generate/: Cargo.toml  README.md
ci-generate/src/: main.rs
ci-generate/src/toolchains/: cargo.rs  maven.rs  meson.rs  mod.rs  poetry.rs  yarn.rs
fuzz/: Cargo.toml
src/: command.rs  error.rs  filters.rs  lib.rs
src/cli/: cargo.rs  maven.rs  meson.rs  mod.rs  poetry.rs  yarn.rs
src/toolchain/: cargo.rs  maven.rs  meson.rs  mod.rs  poetry.rs  yarn.rs
templates/cargo/: README.md  github-docker-application.yml  github.yml  proptest.rs
templates/cargo/github/: deploy.yml  docker-application.yml  publish-template.yml  publish.yml  test.yml
templates/cargo/xtask/: Cargo.toml
templates/cargo/xtask/src/: books.rs  main.rs  runchecks.rs
templates/maven/: README.md  dependabot.yml  github.yml
templates/meson/: github.yml
templates/poetry/: dependabot.yml  github.yml
templates/yarn/: README.md  dependabot.yml
tests/: cargo_test.rs  config_test.rs  integration_test.rs  maven_test.rs  meson_test.rs  poetry_test.rs  yarn_test.rs
tests/common/: mod.rs
tests/output/cargo_project/.github/workflows/: Project-docker-application.yml
tests/output/cargo_project/.reuse/: dep5
tests/output/maven_project/: README.md  pom.xml
tests/output/meson_project/: README.md  meson.build
tests/output/meson_project/.github/workflows/: meson_project.yml
tests/output/meson_project/.reuse/: dep5
tests/output/meson_project/cli/: meson.build  meson_project.c
tests/output/meson_project/lib/: meson.build  meson_project.c  meson_project.h
tests/output/meson_project/tests/: meson.build  meson_project.c
tests/output/poetry_project/.reuse/: dep5
tests/output/yarn_project/: README.md
tests/output/yarn_project/.github/workflows/: yarn_project.yml
tests/output/yarn_project/.reuse/: dep5
tests/repositories/cargo_template/: README.md
tests/repositories/cargo_template/.github/workflows/: Project-docker-application.yml  Project.yml  deploy.yml
tests/repositories/cargo_template/docker/: Dockerfile-amd64  Dockerfile-arm64
tests/repositories/cargo_template/fuzz/: Cargo.toml
tests/repositories/config_template/: config.toml
tests/repositories/config_template/meson_template_config/: Dockerfile  README.md  meson.build  run_tests.sh
tests/repositories/config_template/meson_template_config/.reuse/: dep5
tests/repositories/config_template/meson_template_config/cli/: Personal_Project.cpp  meson.build
tests/repositories/config_template/meson_template_config/lib/: Personal_Project.cpp  Personal_Project.h  meson.build
tests/repositories/config_template/meson_template_config/tests/: Personal_Project.cpp  meson.build
tests/repositories/config_template/yarn_template_config/: README.md
tests/repositories/config_template/yarn_template_config/.reuse/: dep5
tests/repositories/maven_template/: README.md  pom.xml
tests/repositories/maven_template/.github/workflows/: Myprog.yml  maven_template.yml
tests/repositories/maven_template/.reuse/: dep5
tests/repositories/meson_template/: README.md  meson.build
tests/repositories/meson_template/.github/workflows/: meson_template.yml
tests/repositories/meson_template/.reuse/: dep5
tests/repositories/meson_template/cli/: meson.build  meson_template.c
tests/repositories/meson_template/lib/: meson.build  meson_template.c  meson_template.h
tests/repositories/meson_template/tests/: meson.build  meson_template.c
tests/repositories/poetry_template/: pyproject.toml
tests/repositories/poetry_template/.github/workflows/: Myprog.yml
tests/repositories/poetry_template/Myprog/: __main__.py
tests/repositories/poetry_template/Myprog/tests/: __init__.py  test_sum.py
tests/repositories/snapshots/cargo/: .gitignore.snap  Cargo.toml.snap  README.md.snap  cargo_test__common__README.md.snap
tests/repositories/snapshots/cargo/.cargo/: config.snap
tests/repositories/snapshots/cargo/.github/: dependabot.yml.snap
tests/repositories/snapshots/cargo/.reuse/: cargo_test__common__dep5.snap  dep5.snap
tests/repositories/snapshots/cargo/LICENSES/: EUPL-1.2.txt.snap
tests/repositories/snapshots/cargo/docker/: Dockerfile-amd64.snap  Dockerfile-arm64.snap  cargo_test__common__Dockerfile-amd64.snap  cargo_test__common__Dockerfile-arm64.snap
tests/repositories/snapshots/cargo/fuzz/: Cargo.toml.snap  cargo_test__common__.gitignore.snap  cargo_test__common__Cargo.toml.snap
tests/repositories/snapshots/cargo/project/: .gitignore.snap  Cargo.toml.snap
tests/repositories/snapshots/cargo/src/: main.rs.snap
tests/repositories/snapshots/cargo_ci/: README.md.snap
tests/repositories/snapshots/cargo_ci/.reuse/: dep5.snap
tests/repositories/snapshots/cargo_library/: Cargo.toml.snap  README.md.snap
tests/repositories/snapshots/config/: config.toml.snap
tests/repositories/snapshots/maven/: LICENSE.md.snap  README.md.snap  checkstyle.xml.snap  maven_test__common__checkstyle.xml.snap  maven_test__common__pom.xml.snap  pom.xml.snap
tests/repositories/snapshots/meson/: README.md.snap  docker-compose.yml.snap  meson.build.snap  meson_test__common__Dockerfile.snap  meson_test__common__README.md.snap  meson_test__common__docker-compose.yml.snap  meson_test__common__meson.build.snap  meson_test__common__run_tests.sh.snap  run_tests.sh.snap
tests/repositories/snapshots/meson_c/: Dockerfile.snap  README.md.snap  meson.build.snap
tests/repositories/snapshots/meson_cpp/: README.md.snap  docker-compose.yml.snap  meson.build.snap
tests/repositories/snapshots/poetry/: .pre-commit-config.yaml.snap  README.md.snap  poetry_test__common__.pre-commit-config.yaml.snap  poetry_test__common__README.md.snap  poetry_test__common__pyproject.toml.snap  pyproject.toml.snap
tests/repositories/snapshots/yarn/: .gitlab-ci.yml.snap  README.md.snap  yarn_test__common__.gitlab-ci.yml.snap  yarn_test__common__README.md.snap
tests/repositories/yarn_template/: README.md
tests/repositories/yarn_template/.reuse/: dep5
(+205 files in other folders)
