[package]
name = "ci-generate"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Generate a new project for some build systems with the use of templates."
repository = "https://github.com/SoftengPoliTo/ci-generate"
homepage = "https://github.com/SoftengPoliTo/ci-generate"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "^4.4", features = ["derive"] }
dirs = "^5.0"
figment = { version = "^0.10", features = ["toml"] }
license = "^3.1"
minijinja = "^1.0"
serde = { version = "1", features = ["derive"] }
textwrap = "0.16"
thiserror = "1.0.50"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
home = "0.5.9"

[dev-dependencies]
insta = "1.34.0"
walkdir = "2.4.0"
proptest = "1.4.0"
proptest-derive = "0.4.0"

[profile.release]
codegen-units = 1
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
strip = "debuginfo"
