[package]
name = "generate-ci"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
    Provide a series of APIs to generate build systems and Continuous Integration
    configuration files with the use of templates.
    """
repository = "https://github.com/SoftengPoliTo/ci-generate"
homepage = "https://github.com/SoftengPoliTo/ci-generate"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.9"
license = { version = "^3.3", features = ["offline"] }
minijinja = "^1.0"
serde = { version = "1", features = ["derive"] }
textwrap = "0.16"
thiserror = "1.0.50"
tracing = "0.1"

[dev-dependencies]
insta = "1.34.0"
proptest = "1.4.0"
proptest-derive = "0.4.0"
walkdir = "2.4.0"

[profile.release]
codegen-units = 1
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
strip = "debuginfo"
