[package]
name = "ci-generate"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Generate a new project for some build systems with the use of templates."
repository = "https://github.com/SoftengPoliTo/ci-generate"
homepage = "https://github.com/SoftengPoliTo/ci-generate"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generate-ci = { path = ".." }

anyhow = "1"
clap = { version = "^4.4", features = ["derive"] }
figment = { version = "^0.10", features = ["toml"] }
home = "0.5.9"
license = "^3.2"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[[bin]]
name = "ci-generate"

[features]
default = ["cargo", "maven", "meson", "poetry", "yarn"]
cargo = []
maven = []
meson = []
poetry = []
yarn = []

[profile.release]
codegen-units = 1
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
strip = "debuginfo"
